1.解决springBoot与springCloud版本号不对应导致gateway启动失败问题 2.在system模块添加controller作为测试 3.在gateway设置system路由转发配置并测试成功

--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=system
 server.port=9001
+server.servlet.context-path=/system
 eureka.client.service-url.defultZone=http://localhost:8761/eureka/
