--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=9001
 server.servlet.context-path=/system
 eureka.client.service-url.defultZone=http://localhost:8761/eureka/
 #数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=courseimooc
+spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+spring.datasource.username=courseimooc@localhost
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:/mapper/*.xml
