--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
+
+logging.level.com.course.system.mapper=trace
