--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<module>eureka</module>
 		<module>system</module>
 		<module>gateway</module>
+		<module>server</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -60,6 +61,11 @@
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.course</groupId>
+				<artifactId>server</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
