--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -1,4 +1,3 @@
-
 #数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=courseimooc@localhost
@@ -7,4 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
 
-logging.level.com.course.system.mapper=trace
+logging.level.com.course.server.mapper=trace
