--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -1,7 +1,7 @@
 #数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=courseimooc@localhost
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
