1. 集成分页插件PageHelper 2. 分页参数前后端交互，axios的post请求默认是以流的方式传递参数，所以controller里的参数要加@RequestBody注解

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 				<artifactId>mybatis-spring-boot-starter</artifactId>
 				<version>${mybatis-version}</version>
 			</dependency>
+			<!-- mybatis分页插件PageHelper -->
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>1.2.10</version>
+			</dependency>
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
