--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 				<artifactId>server</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.60</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
