--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 		<module>gateway</module>
 		<module>server</module>
         <module>business</module>
-    </modules>
+		<module>generator</module>
+	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -78,6 +79,12 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>1.2.60</version>
+			</dependency>
+			<!-- 模板引擎freemarker -->
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>2.3.29</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
