1. 生成器开发：增加dto生成 2. 生成器开发：代码生成器和mybatis generator整合 3. 增加vue多环境配置，后端地址改为读环境变量 4. 生成器开发：增加生成vue界面代码。 5. 小节管理增删改查功能测试成功 6. 生成器开发：前后端模板增加字段校验

--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -18,6 +18,11 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
         </dependency>
+        <!-- 读xml -->
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
