--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
 				<artifactId>freemarker</artifactId>
 				<version>2.3.29</version>
 			</dependency>
+			<!-- 读xml -->
+			<dependency>
+				<groupId>org.dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>2.1.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
