1. 枚举字段，表格显示中文，表单显示下拉框 2. vue中增加过滤器 3. 增加枚举常量 4. 增加枚举生成器EnumGenerator 5. optionKV过滤器从list改为object

--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -27,6 +27,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.course</groupId>
+            <artifactId>server</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
