--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -1,9 +1,9 @@
-#Êý¾Ý¿âÁ¬½Ó
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.datasource.url=jdbc:mysql://localhost:3306/courseimooc?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=courseimooc@localhost
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 logging.level.com.course.server.mapper=trace
