1. 大文件断点续传与极速秒传：基于OSS接口实现文件上传，增加文件追加上传oss-append和简单上传oss-simple

--- a/file/src/main/resources/application.properties
+++ b/file/src/main/resources/application.properties
@@ -8,3 +8,10 @@ file.domain=http://127.0.0.1:9000/file/f/
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+# oss
+accessKeyId=LTAI4G3teVp4Fk2U7MKsuymw
+accessKeySecret=DNJMKCsar2N3THpSeQVuvfeF5Cf9zf
+endpoint=http://oss-cn-hangzhou.aliyuncs.com
+ossDomain=http://imooc-course-heart.oss-cn-hangzhou.aliyuncs.com/
+bucket=imooc-course-heart
