--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 				<artifactId>dom4j</artifactId>
 				<version>2.1.1</version>
 			</dependency>
+			<!-- 阿里云oss -->
+			<dependency>
+				<groupId>com.aliyun.oss</groupId>
+				<artifactId>aliyun-sdk-oss</artifactId>
+				<version>3.8.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
