1. 视频加密与授权播放：增加视频点播文件上传功能

--- a/file/src/main/resources/application.properties
+++ b/file/src/main/resources/application.properties
@@ -10,8 +10,12 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 # oss
-accessKeyId=LTAI4G3teVp4Fk2U7MKsuymw
-accessKeySecret=DNJMKCsar2N3THpSeQVuvfeF5Cf9zf
-endpoint=http://oss-cn-hangzhou.aliyuncs.com
-ossDomain=http://imooc-course-heart.oss-cn-hangzhou.aliyuncs.com/
-bucket=imooc-course-heart
+oss.accessKeyId=LTAI4G3teVp4Fk2U7MKsuymw
+oss.accessKeySecret=DNJMKCsar2N3THpSeQVuvfeF5Cf9zf
+oss.endpoint=http://oss-cn-hangzhou.aliyuncs.com
+oss.ossDomain=http://imooc-course-heart.oss-cn-hangzhou.aliyuncs.com/
+oss.bucket=imooc-course-heart
+
+# vod
+vod.accessKeyId=LTAI4G1ZKeW89fTwszWb1Cam
+vod.accessKeySecret=cD5kjzpg4FlXgPbCVYaWlosqJJQnHN
