1. 视频加密与授权播放：文件检查时，根据是否是视频点播文件来获取视频信息

--- a/file/src/main/resources/application.properties
+++ b/file/src/main/resources/application.properties
@@ -10,12 +10,14 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 # oss
-oss.accessKeyId=LTAI4G3teVp4Fk2U7MKsuymw
-oss.accessKeySecret=DNJMKCsar2N3THpSeQVuvfeF5Cf9zf
+oss.accessKeyId=LTAI4GBReYGDJFcNM5KdC1nZ
+oss.accessKeySecret=RePRH4a2nqG8xDpFYrS1Qpu6WaKQey
 oss.endpoint=http://oss-cn-hangzhou.aliyuncs.com
-oss.ossDomain=http://imooc-course-heart.oss-cn-hangzhou.aliyuncs.com/
+oss.ossdomain=http://imooc-course-heart.oss-cn-hangzhou.aliyuncs.com/
 oss.bucket=imooc-course-heart
 
 # vod
-vod.accessKeyId=LTAI4G1ZKeW89fTwszWb1Cam
-vod.accessKeySecret=cD5kjzpg4FlXgPbCVYaWlosqJJQnHN
+vod.accessKeyId=LTAI4G1u1c7k8VPdk5TJt3Qw
+vod.accessKeySecret=kaWj0oRXpmMUu9JqNUkK4xFGTdeSDr
+#LTAI4G1u1c7k8VPdk5TJt3Qw
+#kaWj0oRXpmMUu9JqNUkK4xFGTdeSDr
