--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -7,3 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 logging.level.com.course.server.mapper=trace
+
+#redis 配置
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
