--- a/system/pom.xml
+++ b/system/pom.xml
@@ -38,6 +38,11 @@
             <groupId>com.course</groupId>
             <artifactId>server</artifactId>
         </dependency>
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
