1. 用户管理与登录：gateway实现控台登录拦截功能

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.cloud.gateway.routes[2].predicates[0].name=Path
 spring.cloud.gateway.routes[2].predicates[0].args[0]=/file/**
 spring.cloud.gateway.routes[2].filters[0].name=LoginAdmin
 spring.cloud.gateway.routes[2].filters[0].args[0]=true
+
+#redis 配置
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
