--- a/system/pom.xml
+++ b/system/pom.xml
@@ -34,6 +34,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+        <!--  公共业务server -->
         <dependency>
             <groupId>com.course</groupId>
             <artifactId>server</artifactId>
