--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=system
 server.port=9001
 server.servlet.context-path=/system
 eureka.client.service-url.defultZone=http://localhost:8761/eureka/
+
+#redis ≈‰÷√
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
